--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "youtube-mp3-downloader": "^0.5.3",
     "yt-search": "^0.4.1",
     "ytdl-core": "^0.29.1",
-    "discord.js": "^11.4.2"
+    "discord.js": "^11.4.2",
+    "node-opus": "^0.3.1"
   },
   "devDependencies": {},
   "scripts": {
