added some tags

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   "keywords": [
     "discord",
     "discordbot",
-    "discord.js"
+    "discord.js",
+    "silverbot"
   ],
   "author": "chanonlim",
   "license": "MIT",
