--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "silverbot",
-  "version": "0.0.1",
+  "version": "0.0.9",
   "description": "A multipurpose bot by RaZeFeiXX, rereleased by SuperNiintendo!",
   "main": "index.js",
   "dependencies": {
     "dbrlib": "0.0.4",
+    "discord.js": "^11.4.2",
     "discord.js-music-v11": "^1.3.4",
     "ffmpeg-binaries": "^4.0.0",
     "gm": "^1.23.1",
@@ -12,16 +13,16 @@
     "inquirer": "^6.2.1",
     "jimp": "^0.6.0",
     "js-sha256": "^0.9.0",
+    "node-opus": "^0.3.1",
     "npm": "^6.5.0",
+    "progress": "^2.0.3",
     "relevant-urban": "^2.0.0",
     "request": "^2.88.0",
     "semver-compare": "^1.0.0",
     "snekfetch": "^4.0.4",
     "youtube-mp3-downloader": "^0.5.3",
     "yt-search": "^0.4.1",
-    "ytdl-core": "^0.29.1",
-    "discord.js": "^11.4.2",
-    "node-opus": "^0.3.1"
+    "ytdl-core": "^0.29.1"
   },
   "devDependencies": {},
   "scripts": {
