--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dbrlib": "0.0.5",
     "discord.js": "^11.4.2",
     "discord.js-music-v11": "^1.3.4",
+    "express": "^4.16.4",
     "ffmpeg-binaries": "^4.0.0",
     "gm": "^1.23.1",
     "imagemagick": "^0.1.3",
